[package]
name = "rust-weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ureq = { version = "*", features = ["json"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"